--- a/Content/sample_topic.htm
+++ b/Content/sample_topic.htm
@@ -3,7 +3,8 @@
     <head>
     </head>
     <body>
-        <h1>sample_topic</h1>
+        <h1>Sample Topic</h1>
+        <p>Delete this text and replace it with your own content.</p>
         <p>Delete this text and replace it with your own content.</p>
     </body>
 </html>
