--- a/Content/sample_topic.htm
+++ b/Content/sample_topic.htm
@@ -6,5 +6,6 @@
         <h1>Sample Topic</h1>
         <p>Delete this text and replace it with your own content.</p>
         <p>Delete this text and replace it with your own content.</p>
+        <p>Delete this text and replace it with your own content.</p>
     </body>
 </html>
